--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 12:05:02 2018</p>
+         Last Run: Wed Nov 28 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -31,38 +31,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-3</td>
-                        <td>-6</td>
+                        <td>-4</td>
+                        <td>-7</td>
                         <td>5</td>
                         <td>77</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>4</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>5</td>
-                        <td>80</td>
+                        <td>4</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>12</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-5</td>
-                        <td>-8</td>
-                        <td>5</td>
-                        <td>84</td>
+                        <td>-6</td>
+                        <td>-10</td>
+                        <td>4</td>
+                        <td>81</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WSW</td>
-                        <td>19</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
                  "-7",
-                 "-8"
+                 "-7",
+                 "-10"
                ]
              },
              {
@@ -101,9 +101,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
                  "-4",
-                 "-5"
+                 "-4",
+                 "-6"
                ]
              }
            ]
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "5",
-                 "5"
+                 "4",
+                 "4"
                ]
              },
              {
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "77",
-                 "80",
-                 "84"
+                 "78",
+                 "81"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "4",
-                 "12",
-                 "19"
+                 "5",
+                 "6",
+                 "6"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 12:05:02 2018</p>
+         Last Run: Wed Nov 28 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -247,11 +247,11 @@
                         <td>01:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
-                        <td>-8</td>
-                        <td>37</td>
+                        <td>-7</td>
+                        <td>34</td>
                         <td>83</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NNE</td>
                         <td>91</td>
                      </tr>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-8",
+                 "-7",
                  "-7",
                  "-7"
                ]
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "37",
+                 "34",
                  "24",
                  "24"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 12:05:02 2018</p>
+         Last Run: Wed Nov 28 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -464,34 +464,34 @@
                         <td>-5</td>
                         <td>-8</td>
                         <td>24</td>
-                        <td>84</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NE</td>
+                        <td>NNE</td>
                         <td>95</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>-5</td>
-                        <td>-8</td>
+                        <td>-4</td>
+                        <td>-7</td>
                         <td>24</td>
-                        <td>80</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NE</td>
-                        <td>95</td>
+                        <td>NNE</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
-                        <td>-5</td>
-                        <td>-8</td>
+                        <td>-4</td>
+                        <td>-7</td>
                         <td>24</td>
-                        <td>75</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NE</td>
+                        <td>NNE</td>
                         <td>94</td>
                      </tr>
                   </tbody>
@@ -520,8 +520,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-8",
-                 "-8",
-                 "-8"
+                 "-7",
+                 "-7"
                ]
              },
              {
@@ -532,8 +532,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-5",
-                 "-5",
-                 "-5"
+                 "-4",
+                 "-4"
                ]
              }
            ]
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
                  "80",
-                 "75"
+                 "76",
+                 "71"
                ]
              },
              {
@@ -613,7 +613,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "95",
-                 "95",
+                 "94",
                  "94"
                ]
              }
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 12:05:02 2018</p>
+         Last Run: Wed Nov 28 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,36 +676,36 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-11</td>
-                        <td>-16</td>
+                        <td>-9</td>
+                        <td>-14</td>
                         <td>8</td>
-                        <td>83</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>WNW</td>
-                        <td>51</td>
+                        <td>10</td>
+                        <td>NW</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-11</td>
-                        <td>-16</td>
+                        <td>-10</td>
+                        <td>-15</td>
                         <td>8</td>
-                        <td>83</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WNW</td>
-                        <td>42</td>
+                        <td>NW</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-12</td>
-                        <td>-17</td>
+                        <td>-10</td>
+                        <td>-15</td>
                         <td>8</td>
-                        <td>85</td>
+                        <td>83</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WNW</td>
                         <td>39</td>
                      </tr>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-16",
-                 "-16",
-                 "-17"
+                 "-14",
+                 "-15",
+                 "-15"
                ]
              },
              {
@@ -746,9 +746,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-11",
-                 "-11",
-                 "-12"
+                 "-9",
+                 "-10",
+                 "-10"
                ]
              }
            ]
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "83",
-                 "85"
+                 "79",
+                 "80",
+                 "83"
                ]
              },
              {
@@ -827,8 +827,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "51",
-                 "42",
+                 "52",
+                 "43",
                  "39"
                ]
              }
