--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 14:05:02 2018</p>
+         Last Run: Wed Nov 28 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>-2</td>
                         <td>-5</td>
                         <td>3</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
@@ -43,26 +43,26 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-4</td>
-                        <td>-8</td>
-                        <td>5</td>
-                        <td>78</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>3</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>W</td>
                         <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-5</td>
-                        <td>-9</td>
+                        <td>-4</td>
+                        <td>-7</td>
                         <td>4</td>
-                        <td>81</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>5</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-5",
-                 "-8",
-                 "-9"
+                 "-6",
+                 "-7"
                ]
              },
              {
@@ -102,8 +102,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-4",
-                 "-5"
+                 "-3",
+                 "-4"
                ]
              }
            ]
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "5",
+                 "3",
                  "4"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "78",
-                 "81"
+                 "70",
+                 "70",
+                 "74"
                ]
              },
              {
@@ -184,7 +184,7 @@
                "data":[
                  "5",
                  "5",
-                 "5"
+                 "6"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 14:05:02 2018</p>
+         Last Run: Wed Nov 28 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>13</td>
+                        <td>12</td>
                         <td>81</td>
                         <td>0</td>
                         <td>10</td>
@@ -273,7 +273,7 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>10</td>
-                        <td>77</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "13",
+                 "12",
                  "9",
                  "10"
                ]
@@ -388,7 +388,7 @@
                "data":[
                  "81",
                  "77",
-                 "77"
+                 "76"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 14:05:02 2018</p>
+         Last Run: Wed Nov 28 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -464,7 +464,7 @@
                         <td>-5</td>
                         <td>-8</td>
                         <td>24</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NNE</td>
@@ -472,25 +472,25 @@
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>33</td>
-                        <td>76</td>
+                        <td>22</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NNE</td>
-                        <td>93</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>24</td>
-                        <td>71</td>
+                        <td>19</td>
+                        <td>72</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>NNE</td>
                         <td>94</td>
                      </tr>
@@ -591,8 +591,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "33",
-                 "24"
+                 "22",
+                 "19"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "76",
-                 "71"
+                 "81",
+                 "77",
+                 "72"
                ]
              },
              {
@@ -613,7 +613,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "95",
-                 "93",
+                 "95",
                  "94"
                ]
              }
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 14:05:02 2018</p>
+         Last Run: Wed Nov 28 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,38 +676,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-9</td>
-                        <td>-14</td>
-                        <td>8</td>
-                        <td>79</td>
+                        <td>-8</td>
+                        <td>-13</td>
+                        <td>7</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>NW</td>
-                        <td>52</td>
+                        <td>WNW</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-10</td>
-                        <td>-15</td>
-                        <td>8</td>
-                        <td>80</td>
+                        <td>-9</td>
+                        <td>-14</td>
+                        <td>7</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>NW</td>
-                        <td>43</td>
+                        <td>WNW</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-10</td>
                         <td>-15</td>
-                        <td>8</td>
-                        <td>83</td>
+                        <td>7</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>NW</td>
-                        <td>39</td>
+                        <td>WNW</td>
+                        <td>35</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,8 +734,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-13",
                  "-14",
-                 "-15",
                  "-15"
                ]
              },
@@ -746,8 +746,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-8",
                  "-9",
-                 "-10",
                  "-10"
                ]
              }
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "8",
-                 "8",
-                 "8"
+                 "7",
+                 "7",
+                 "7"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
-                 "80",
-                 "83"
+                 "81",
+                 "82",
+                 "86"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
-                 "43",
-                 "39"
+                 "46",
+                 "39",
+                 "35"
                ]
              }
            ]
