--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 15:05:02 2018</p>
+         Last Run: Wed Nov 28 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Clear</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>70</td>
                         <td>0</td>
                         <td>8</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>6</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
+                 "2",
                  "3",
                  "4"
                ]
@@ -184,7 +184,7 @@
                "data":[
                  "5",
                  "5",
-                 "6"
+                 "7"
                ]
              }
            ]
@@ -219,12 +219,13 @@
                      options: options
                   });
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 15:05:02 2018</p>
+         Last Run: Wed Nov 28 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -273,7 +274,7 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>10</td>
-                        <td>76</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
@@ -388,7 +389,7 @@
                "data":[
                  "81",
                  "77",
-                 "76"
+                 "77"
                ]
              },
              {
@@ -439,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 15:05:02 2018</p>
+         Last Run: Wed Nov 28 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -476,7 +477,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>22</td>
-                        <td>77</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NNE</td>
@@ -490,7 +491,7 @@
                         <td>19</td>
                         <td>72</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>NNE</td>
                         <td>94</td>
                      </tr>
@@ -602,7 +603,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "81",
-                 "77",
+                 "76",
                  "72"
                ]
              },
@@ -654,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 15:05:02 2018</p>
+         Last Run: Wed Nov 28 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,11 +680,11 @@
                         <td>-8</td>
                         <td>-13</td>
                         <td>7</td>
-                        <td>81</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>46</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -691,11 +692,11 @@
                         <td>-9</td>
                         <td>-14</td>
                         <td>7</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>39</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -703,11 +704,11 @@
                         <td>-10</td>
                         <td>-15</td>
                         <td>7</td>
-                        <td>86</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>35</td>
+                        <td>36</td>
                      </tr>
                   </tbody>
                </table>
@@ -816,9 +817,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "80",
                  "81",
-                 "82",
-                 "86"
+                 "85"
                ]
              },
              {
@@ -827,9 +828,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "39",
-                 "35"
+                 "48",
+                 "40",
+                 "36"
                ]
              }
            ]
